<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <Button
        android:id="@+id/learn_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/learn_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp">
    </Button>
    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/creating_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        >
    </Button>
    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/settings_name"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_weight="1"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">
    </Button>

</LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>