<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_dark"
    android:orientation="vertical"
    tools:context=".NewCreateActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_dark"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/engl_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:text="English ▼"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rus_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:text="Russian"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/right_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"

            android:text="right Sort"
            android:textColor="@color/white"
            android:textSize="15sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/words_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow_dark"
            android:scrollbars="vertical" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginVertical="10dp"
        android:background="@color/yellow_dark"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_for_back_from_creating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_for_learn_background"
            android:padding="10dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="12sp" />


        <androidx.appcompat.widget.AppCompatButton

            android:id="@+id/button_for_reset_all_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_for_learn_background"
            android:padding="10dp"
            android:text="@string/reset_all_progress"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_for_delete_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_for_learn_background"
            android:padding="10dp"
            android:text="@string/delete_word"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_for_save_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:background="@drawable/button_for_learn_background"
            android:padding="10dp"
            android:text="@string/add_word"
            android:textColor="@color/black"
            android:textSize="12sp" />


    </LinearLayout>

</LinearLayout>